# media-player-info

./: Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
debian/: changelog  control  rules  watch
tools/: mpi2hwdb.py  mpi2udev.py  udev-syntax-check.py
